--- a/templates/cotisation/show.html.twig
+++ b/templates/cotisation/show.html.twig
@@ -340,7 +340,7 @@
                     Ajouter un membre
                 </button>
 
-                <a href="#" class="btn btn-success">
+                <a href="#" class="btn btn-success" style="margin-left: 1rem; background-color: #007BFF; color: white;">
                     <span class="btn-icon">💳</span>
                     Faire un paiement
                 </a>
@@ -380,7 +380,7 @@
                         <span class="btn-icon">✏️</span>
                         Modifier
                     </button> #}
-                    <a href="{{ path('app_cotisation_edit', {'id': cotisation.id}) }}" class="btn btn-sm btn-secondary">
+                    <a href="{{ path('app_cotisation_edit', {'id': cotisation.id}) }}" class="btn btn-sm btn-secondary" style="margin-left: 1rem; background-color:#6c757d; color: white;">
                         <span class="btn-icon">✏️</span> Modifier les informations de la cotisations
                     </a>
 
